--- a/index.html
+++ b/index.html
@@ -31,132 +31,135 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    <section class="section">
-      <!-- section-center -->
-      <div class="section-center">
-        <!--header title -->
-        <div class="header-title">
-          <h1 class="title">10,000+ of our users love our products.</h1>
-          <p class="title-text">
-            We only provide great products combined with excellent customer
-            service. See what our satisfied customers are saying about our
-            services.
-          </p>
-        </div>
-        <!-- end of header title -->
-        <!-- raiting container -->
-        <div class="rating-container">
-          <!-- raiting block -->
-          <div class="rating-block first-block">
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <p class="rating-text">Rated 5 Stars in Reviews</p>
+    <main>
+      <section class="section">
+        <!-- section-center -->
+        <div class="section-center">
+          <!--header title -->
+          <div class="header-title">
+            <h1 class="title">10,000+ of our users love our products.</h1>
+            <p class="title-text">
+              We only provide great products combined with excellent customer
+              service. See what our satisfied customers are saying about our
+              services.
+            </p>
           </div>
-          <!-- end of raiting-block -->
+          <!-- end of header title -->
+          <!-- raiting container -->
+          <div class="rating-container">
+            <!-- raiting block -->
+            <div class="rating-block first-block">
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <p class="rating-text">Rated 5 Stars in Reviews</p>
+            </div>
+            <!-- end of raiting-block -->
 
-          <!-- raiting block -->
-          <div class="rating-block second-block">
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <p class="rating-text">Rated 5 Stars in Report Guru</p>
+            <!-- raiting block -->
+            <div class="rating-block second-block">
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <p class="rating-text">Rated 5 Stars in Report Guru</p>
+            </div>
+            <!-- end of raiting-block -->
+            <!-- raiting block -->
+            <div class="rating-block third-block">
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <span><i class="fa-solid fa-star"></i></span>
+              <p class="rating-text">Rated 5 Stars in BestTech</p>
+            </div>
+            <!-- end of raiting-block -->
           </div>
-          <!-- end of raiting-block -->
-          <!-- raiting block -->
-          <div class="rating-block third-block">
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <span><i class="fa-solid fa-star"></i></span>
-            <p class="rating-text">Rated 5 Stars in BestTech</p>
-          </div>
-          <!-- end of raiting-block -->
+          <!-- end of raiting container -->
+          <article class="card-container">
+            <!-- single card -->
+            <div class="single-card first-card">
+              <!-- card-header -->
+              <div class="card-header">
+                <div class="img-container">
+                  <img
+                    src="./images/image-colton.jpg"
+                    alt="profile picture"
+                    class="card-img"
+                  />
+                </div>
+                <div class="card-title">
+                  <h5 class="name">Colton Smith</h5>
+                  <h5 class="status">Verified Buyer</h5>
+                </div>
+              </div>
+              <p class="card-text">
+                "We needed the same printed design as the one we had ordered a
+                week prior. Not only did they find the original order, but we
+                also received it in time. Excellent!"
+              </p>
+            </div>
+            <!-- end of single card -->
+            <!-- single card -->
+            <div class="single-card second-card">
+              <div class="card-header">
+                <div class="img-container">
+                  <img
+                    src="./images/image-irene.jpg"
+                    alt="profile picture"
+                    class="card-img"
+                  />
+                </div>
+                <div class="card-title">
+                  <h5 class="name">Irene Roberts</h5>
+                  <h5 class="status">Verified Buyer</h5>
+                </div>
+              </div>
+              <p class="card-text">
+                "Customer service is always excellent and very quick turn
+                around. Completely delighted with the simplicity of the purchase
+                and the speed of delivery."
+              </p>
+            </div>
+            <!-- end of single card -->
+            <!-- single card -->
+            <div class="single-card third-card">
+              <div class="card-header">
+                <div class="img-container">
+                  <img
+                    src="./images/image-anne.jpg"
+                    alt="profile picture"
+                    class="card-img"
+                  />
+                </div>
+                <div class="card-title">
+                  <h5 class="name">Anne Wallace</h5>
+                  <h5 class="status">Verified Buyer</h5>
+                </div>
+              </div>
+              <p class="card-text">
+                "Put an order with this company and can only praise them for the
+                very high standard. Will definitely use them again and recommend
+                them to everyone!"
+              </p>
+            </div>
+            <!-- end of single card -->
+          </article>
         </div>
-        <!-- end of raiting container -->
-        <article class="card-container">
-          <!-- single card -->
-          <div class="single-card first-card">
-            <!-- card-header -->
-            <div class="card-header">
-              <div class="img-container">
-                <img
-                  src="./images/image-colton.jpg"
-                  alt="profile picture"
-                  class="card-img"
-                />
-              </div>
-              <div class="card-title">
-                <h5 class="name">Colton Smith</h5>
-                <h5 class="status">Verified Buyer</h5>
-              </div>
-            </div>
-            <p class="card-text">
-              "We needed the same printed design as the one we had ordered a
-              week prior. Not only did they find the original order, but we also
-              received it in time. Excellent!"
-            </p>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card second-card">
-            <div class="card-header">
-              <div class="img-container">
-                <img
-                  src="./images/image-irene.jpg"
-                  alt="profile picture"
-                  class="card-img"
-                />
-              </div>
-              <div class="card-title">
-                <h5 class="name">Irene Roberts</h5>
-                <h5 class="status">Verified Buyer</h5>
-              </div>
-            </div>
-            <p class="card-text">
-              "Customer service is always excellent and very quick turn around.
-              Completely delighted with the simplicity of the purchase and the
-              speed of delivery."
-            </p>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card third-card">
-            <div class="card-header">
-              <div class="img-container">
-                <img
-                  src="./images/image-anne.jpg"
-                  alt="profile picture"
-                  class="card-img"
-                />
-              </div>
-              <div class="card-title">
-                <h5 class="name">Anne Wallace</h5>
-                <h5 class="status">Verified Buyer</h5>
-              </div>
-            </div>
-            <p class="card-text">
-              "Put an order with this company and can only praise them for the
-              very high standard. Will definitely use them again and recommend
-              them to everyone!"
-            </p>
-          </div>
-          <!-- end of single card -->
-        </article>
-      </div>
-      <!-- end of section center -->
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by
-        <a href="https://github.com/DeDe-code" target="blank">Dezső Derzsi</a>.
-      </div>
-    </section>
+        <!-- end of section center -->
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://github.com/DeDe-code" target="blank">Dezső Derzsi</a
+          >.
+        </div>
+      </section>
+    </main>
   </body>
 </html>
